--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
      
       </div>
       <div class="img">
-  <a href="https://alphaxbyte.serv00.net/index2.html">
+  <a href="https://anamzafar.vercel.app/index2.html">
     <img src="rinky.png" alt="Click to open link" />
   </a>
 </div>
