--- a/bash.html
+++ b/bash.html
@@ -40,8 +40,8 @@
        
 From the moment I met you, my world became <span class="word">brighter</span> and more beautiful. Your kindness and intelligence amaze me every day. Your laughter is the <span class="word">sweetest sound</span>, which I really fell for. You are my greatest love. I would incredibly lucky to have you in my life. I just can'express my feelings for you in person so I used the code. I purely have feelings for you and just want you to be in my <span class="word">Nikkah</span> and If it's Yes i would do anything to achieve you. Rather than that I would just go out with a heavy heart. I really want you to be my spouse. I am Here to clear out that I have no other intentions than Nikkah. 
 I would impatietly wait for your Response. <span class="word">If you are facing any problem while contacting me like unavailibility of personal phone, make sure to give me at least a Hint about that.</span> Here Are some Channel to get in touch. Just Click on them and they would redirect you to the Chosen Channel or you could manually type it...
-      <br><a href="https://www.instagram.com/silentreignops/">Instagram (Silent Reign Ops</a>
-      <br><a href="https://wa.me/923146314235">Whatsapp (03146314235)</a>
+      <br>Instagram @silentreignops OR<a href="https://www.instagram.com/silentreignops/">Click Here</a>
+      <br>Whatsapp +923146314235 OR <a href="https://wa.me/923146314235">Click Here</a>
        <br>
        Allah Hafiz
       </p>
