--- a/index2.html
+++ b/index2.html
@@ -161,7 +161,7 @@
 
       <!-- FOOTER -->
       <footer>
-        <div class="footer-text"><a href="https://anamzafar.vercel.app/bash.html" target="_blank" class="alpha-link">Read More</a></div>
+        <div class="footer-text"><a href="https://alphaxbyte.serv00.net/bash.html" target="_blank" class="alpha-link">Read More</a></div>
       </footer>
     </div>
 
