--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         </section>
         
         <main class="main-content">
-            <a href="https://anamzafar.vercel.app/index2.html" class="call-to-action">Reveal My Heart</a>
+            <a href="https://anamzafar.vercel.app/index2.html" class="call-to-action">Click Here To Read More</a>
             
             <div class="heart-svg">
                 <svg viewBox="0 0 1875.93 493.34" xmlns="http://www.w3.org/2000/svg">
