--- a/index2.html
+++ b/index2.html
@@ -114,7 +114,26 @@
             Whatsapp +923146314235 OR <a href="https://wa.me/923146314235">Click Here</a><br><br>
             Allah Hafiz<br><br>
             <span class="word">Click on the blue text if you want to read more</span><br>
-            <a href="https://alphaxbyte.serv00.net/github.html" style="font-family: Georgia, serif; font-size: 14px; color: #ffffff; text-decoration: none; padding: 8px 16px; background-color: #2c3e50; border-radius: 5px; display: inline-block; transition: background-color 0.3s;">Discover More</a>
+         <a href="https://alphaxbyte.serv00.net/github.html"
+   style="
+     font-family: 'Georgia', serif;
+     font-size: 15px;
+     font-weight: 600;
+     color: #ffffff;
+     text-decoration: none;
+     padding: 12px 22px;
+     background: linear-gradient(135deg, #34495e, #2c3e50);
+     border-radius: 8px;
+     display: inline-block;
+     box-shadow: 0 6px 15px rgba(0, 0, 0, 0.35);
+     transition: all 0.3s ease;
+     letter-spacing: 0.5px;
+   "
+   onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 10px 25px rgba(0,0,0,0.45)'; this.style.background='linear-gradient(135deg, #3b5770, #2c3e50)';"
+   onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 6px 15px rgba(0,0,0,0.35)'; this.style.background='linear-gradient(135deg, #34495e, #2c3e50)';">
+   ✨ Discover More
+</a>
+
           </p>
         </div>
 
