--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Lifeline</title>
+  <title>Nikkah Proposal</title>
   <link rel="icon" href="../img/CJM.png">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Poppins:400,600&display=swap" rel="stylesheet">
 
