--- a/index2.html
+++ b/index2.html
@@ -117,22 +117,31 @@
          <a href="https://alphaxbyte.serv00.net/github.html"
    style="
      font-family: 'Georgia', serif;
-     font-size: 15px;
-     font-weight: 600;
+     font-size: 16px;
+     font-weight: bold;
      color: #ffffff;
      text-decoration: none;
-     padding: 12px 22px;
-     background: linear-gradient(135deg, #34495e, #2c3e50);
-     border-radius: 8px;
+     padding: 12px 26px;
+     background: linear-gradient(135deg, #1abc9c, #2c3e50);
+     border-radius: 30px;
      display: inline-block;
-     box-shadow: 0 6px 15px rgba(0, 0, 0, 0.35);
-     transition: all 0.3s ease;
      letter-spacing: 0.5px;
+     box-shadow: 0 8px 20px rgba(0,0,0,0.35);
+     transition: all 0.35s ease;
    "
-   onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 10px 25px rgba(0,0,0,0.45)'; this.style.background='linear-gradient(135deg, #3b5770, #2c3e50)';"
-   onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 6px 15px rgba(0,0,0,0.35)'; this.style.background='linear-gradient(135deg, #34495e, #2c3e50)';">
+   onmouseover="
+     this.style.transform='translateY(-3px) scale(1.05)';
+     this.style.boxShadow='0 12px 30px rgba(26,188,156,0.6)';
+     this.style.background='linear-gradient(135deg, #2ecc71, #34495e)';
+   "
+   onmouseout="
+     this.style.transform='translateY(0) scale(1)';
+     this.style.boxShadow='0 8px 20px rgba(0,0,0,0.35)';
+     this.style.background='linear-gradient(135deg, #1abc9c, #2c3e50)';
+   ">
    ✨ Discover More
 </a>
+
 
           </p>
         </div>
