--- a/index2.html
+++ b/index2.html
@@ -1,10 +1,10 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Nikkah Proposal</title>
   <link rel="icon" href="../img/CJM.png">
-  <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Poppins:400,600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;600&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 
   <!-- jQuery -->
   <script
@@ -15,27 +15,106 @@
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
-      background: linear-gradient(135deg, #1c1c1c, #111111);
+      background: linear-gradient(135deg, #0f1419 0%, #1a252f 50%, #2c3e50 100%);
       color: #f2f2f2;
       font-family: 'Poppins', Arial, sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh;
       margin: 0;
+      padding: 20px;
+      position: relative;
+      overflow-x: hidden;
+    }
+
+    /* Animated background particles */
+    body::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: 
+        radial-gradient(circle at 20% 80%, rgba(243, 156, 18, 0.15) 0%, transparent 50%),
+        radial-gradient(circle at 80% 20%, rgba(231, 76, 60, 0.15) 0%, transparent 50%),
+        radial-gradient(circle at 40% 40%, rgba(52, 152, 219, 0.15) 0%, transparent 50%);
+      pointer-events: none;
+      animation: bgShift 15s ease-in-out infinite;
+    }
+
+    @keyframes bgShift {
+      0%, 100% { opacity: 1; transform: scale(1); }
+      50% { opacity: 0.8; transform: scale(1.1); }
+    }
+
+    /* Floating hearts */
+    .floating-hearts {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      overflow: hidden;
+      z-index: 1;
+    }
+
+    .heart {
+      position: absolute;
+      font-size: 1.5rem;
+      color: #e74c3c;
+      opacity: 0.3;
+      animation: float 15s linear infinite;
+    }
+
+    @keyframes float {
+      0% { transform: translateY(100vh) rotate(0deg); opacity: 0; }
+      10% { opacity: 0.3; }
+      90% { opacity: 0.3; }
+      100% { transform: translateY(-100px) rotate(360deg); opacity: 0; }
     }
 
     main {
       width: 90%;
-      max-width: 800px;
+      max-width: 900px;
+      position: relative;
+      z-index: 2;
+      animation: fadeInUp 1s ease-out;
+    }
+
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     .browser {
-      background: rgba(0,0,0,0.75);
-      box-shadow: 0 0 25px rgba(77,166,255,0.4);
-      border-radius: 12px;
-      padding: 30px;
+      background: rgba(15, 20, 25, 0.85);
+      backdrop-filter: blur(10px);
+      box-shadow: 
+        0 0 40px rgba(243, 156, 18, 0.3),
+        0 0 80px rgba(231, 76, 60, 0.2),
+        inset 0 0 60px rgba(0,0,0,0.3);
+      border-radius: 16px;
+      padding: 40px;
+      border: 2px solid rgba(243, 156, 18, 0.3);
+      transition: all 0.3s ease;
+    }
+
+    .browser:hover {
+      box-shadow: 
+        0 0 60px rgba(243, 156, 18, 0.5),
+        0 0 100px rgba(231, 76, 60, 0.3),
+        inset 0 0 60px rgba(0,0,0,0.3);
+      transform: translateY(-5px);
     }
 
     .browserbar {
@@ -43,7 +122,9 @@
       display: flex;
       align-items: center;
       gap: 8px;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
+      padding-bottom: 15px;
+      border-bottom: 1px solid rgba(243, 156, 18, 0.2);
     }
 
     .browserbar button {
@@ -52,6 +133,12 @@
       border-radius: 50%;
       border: none;
       cursor: pointer;
+      transition: all 0.3s ease;
+    }
+
+    .browserbar button:hover {
+      transform: scale(1.2);
+      box-shadow: 0 0 10px currentColor;
     }
 
     .close { background: #ff5f56; }
@@ -59,42 +146,93 @@
     .max { background: #27c93f; }
 
     #space p {
-      font-size: 20px; /* readable size */
-      line-height: 1.8;
+      font-size: 18px;
+      line-height: 1.9;
+      color: #e8e8e8;
+      font-weight: 300;
     }
 
     .word {
-      font-family: 'Amatic SC', cursive;
-      font-size: 28px;
-      color: #4da6ff;
+      font-family: 'Dancing Script', cursive;
+      font-size: 26px;
+      background: linear-gradient(45deg, #f39c12, #e74c3c);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
       font-weight: bold;
-      letter-spacing: 1px;
+      letter-spacing: 0.5px;
+      display: inline-block;
+      animation: shimmer 3s ease-in-out infinite;
+    }
+
+    @keyframes shimmer {
+      0%, 100% { filter: brightness(1); }
+      50% { filter: brightness(1.3); }
     }
 
     strong {
-      font-size: 28px;
+      font-family: 'Playfair Display', serif;
+      font-size: 32px;
+      color: #f39c12;
+      text-shadow: 0 0 20px rgba(243, 156, 18, 0.5);
+      letter-spacing: 1px;
     }
 
     a {
-      font-family: 'Amatic SC', cursive;
-      font-size: 22px;
-      color: #4da6ff;
+      font-family: 'Poppins', sans-serif;
+      font-size: 16px;
+      color: #3498db;
       text-decoration: none;
       padding: 4px 10px;
-      border-bottom: 2px solid rgba(77,166,255,0.4);
-      transition: all 0.3s ease;
+      border-bottom: 2px solid rgba(52, 152, 219, 0.5);
+      transition: all 0.4s ease;
+      display: inline-block;
+      border-radius: 4px;
     }
 
     a:hover {
       color: #ffffff;
-      border-bottom: 2px solid #4da6ff;
-      letter-spacing: 2px;
-      text-shadow: 0 0 8px rgba(77,166,255,0.8);
+      background: rgba(52, 152, 219, 0.2);
+      border-bottom: 2px solid #3498db;
+      letter-spacing: 1px;
+      transform: translateY(-2px);
+      box-shadow: 0 4px 15px rgba(52, 152, 219, 0.4);
+    }
+
+    .typed-cursor {
+      color: #f39c12;
+      animation: blink 0.7s infinite;
+    }
+
+    @keyframes blink {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0; }
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .browser {
+        padding: 25px;
+      }
+
+      #space p {
+        font-size: 16px;
+      }
+
+      strong {
+        font-size: 26px;
+      }
+
+      .word {
+        font-size: 22px;
+      }
     }
   </style>
 </head>
 
 <body>
+  <div class="floating-hearts" id="hearts-container"></div>
+
   <main>
     <section class="browser">
       <div class="browserbar">
@@ -114,35 +252,38 @@
             Whatsapp +923146314235 OR <a href="https://wa.me/923146314235">Click Here</a><br><br>
             Allah Hafiz<br><br>
             <span class="word">Click on the blue text if you want to read more</span><br>
-         <a href="https://alphaxbyte.serv00.net/github.html"
-   style="
-     font-family: 'Georgia', serif;
-     font-size: 16px;
-     font-weight: bold;
-     color: #ffffff;
-     text-decoration: none;
-     padding: 12px 26px;
-     background: linear-gradient(135deg, #1abc9c, #2c3e50);
-     border-radius: 30px;
-     display: inline-block;
-     letter-spacing: 0.5px;
-     box-shadow: 0 8px 20px rgba(0,0,0,0.35);
-     transition: all 0.35s ease;
-   "
-   onmouseover="
-     this.style.transform='translateY(-3px) scale(1.05)';
-     this.style.boxShadow='0 12px 30px rgba(26,188,156,0.6)';
-     this.style.background='linear-gradient(135deg, #2ecc71, #34495e)';
-   "
-   onmouseout="
-     this.style.transform='translateY(0) scale(1)';
-     this.style.boxShadow='0 8px 20px rgba(0,0,0,0.35)';
-     this.style.background='linear-gradient(135deg, #1abc9c, #2c3e50)';
-   ">
-   ✨ Discover More
-</a>
-
-
+            <a href="https://alphaxbyte.serv00.net/github.html"
+               style="
+                 font-family: 'Poppins', sans-serif;
+                 font-size: 18px;
+                 font-weight: 600;
+                 color: #ffffff;
+                 text-decoration: none;
+                 padding: 16px 40px;
+                 background: linear-gradient(135deg, #f39c12, #e74c3c);
+                 border-radius: 50px;
+                 display: inline-block;
+                 margin-top: 15px;
+                 letter-spacing: 1px;
+                 box-shadow: 0 10px 30px rgba(243, 156, 18, 0.4);
+                 transition: all 0.4s ease;
+                 border: none;
+                 text-transform: uppercase;
+               "
+               onmouseover="
+                 this.style.transform='translateY(-5px) scale(1.05)';
+                 this.style.boxShadow='0 15px 40px rgba(243, 156, 18, 0.6)';
+                 this.style.background='linear-gradient(135deg, #e74c3c, #f39c12)';
+                 this.style.letterSpacing='2px';
+               "
+               onmouseout="
+                 this.style.transform='translateY(0) scale(1)';
+                 this.style.boxShadow='0 10px 30px rgba(243, 156, 18, 0.4)';
+                 this.style.background='linear-gradient(135deg, #f39c12, #e74c3c)';
+                 this.style.letterSpacing='1px';
+               ">
+               ✨ Discover More
+            </a>
           </p>
         </div>
 
@@ -152,14 +293,31 @@
   </main>
 
   <script>
+    // Create floating hearts
+    function createHearts() {
+      const container = document.getElementById('hearts-container');
+      for (let i = 0; i < 15; i++) {
+        const heart = document.createElement('div');
+        heart.className = 'heart';
+        heart.innerHTML = '❤️';
+        heart.style.left = Math.random() * 100 + '%';
+        heart.style.animationDuration = (Math.random() * 10 + 10) + 's';
+        heart.style.animationDelay = Math.random() * 5 + 's';
+        container.appendChild(heart);
+      }
+    }
+
+    createHearts();
+
     // Typed.js initialization
     var typed = new Typed('#typed', {
       stringsElement: '#typed-strings',
-      typeSpeed: 40,
+      typeSpeed: 30,
       backSpeed: 0,
       fadeOut: false,
       loop: false,
-      showCursor: true
+      showCursor: true,
+      cursorChar: '|'
     });
   </script>
 </body>
