--- a/index2.html
+++ b/index2.html
@@ -238,8 +238,8 @@
           Instagram @silentreignops OR <a href="https://www.instagram.com/silentreignops/">Click Here</a><br>
           Whatsapp +923146314235 OR <a href="https://wa.me/923146314235">Click Here</a><br><br>
           Allah Hafiz<br><br>
-          <span class="word">Click on the blue text if you want to read more</span><br>
-          <a href="https://alphaxbyte.serv00.net/github.html"
+          <span class="word">Click below if you want to read more</span><br>
+          <a href="https://alphaxbyte.serv00.net/a.html"
              style="
                font-family: 'Poppins', sans-serif;
                font-size: 18px;
