--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Nikkah Proposal | 01</title>
 
+<!-- GOOGLE FONTS -->
+<link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Dancing+Script:wght@500;700&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
+
 <style>
 * {
     margin: 0;
@@ -13,12 +16,13 @@
 }
 
 body {
-    font-family: 'Amiri', serif;
+    font-family: 'Playfair Display', serif;
     background: linear-gradient(135deg, #0f1419 0%, #1a252f 50%, #2c3e50 100%);
     color: #ecf0f1;
     min-height: 100vh;
     overflow-x: hidden;
     position: relative;
+    letter-spacing: 0.3px;
 }
 
 body::before {
@@ -79,6 +83,7 @@ body::before {
 }
 
 .arabic-text {
+    font-family: 'Amiri', serif;
     font-size: 1.8rem;
     color: #e74c3c;
     margin-bottom: 25px;
@@ -167,6 +172,7 @@ input[type="password"] {
 }
 
 .header .arabic {
+    font-family: 'Amiri', serif;
     font-size: 2.5rem;
     color: #e74c3c;
 }
@@ -181,18 +187,25 @@ input[type="password"] {
     margin-bottom: 40px;
 }
 
+/* FIXED CTA BUTTON */
 .call-to-action {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+
     font-size: 1.6rem;
-    padding: 20px 40px;
+    padding: 20px 50px;
     border-radius: 50px;
     background: linear-gradient(45deg,#f39c12,#e74c3c);
     color: #fff;
     text-decoration: none;
     transition: .4s;
+    text-align: center;
 }
 
 .call-to-action:hover {
     transform: scale(1.1);
+    box-shadow: 0 0 25px rgba(243,156,18,0.6);
 }
 
 /* FLOATING HEARTS */
