--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
             </header>
             
             <section class="verse-section">
-                <p class="verse">"And of His signs is that He created for you from yourselves mates that you may find tranquility in them; and He placed between you affection and mercy. Indeed in that are signs for a people who give thought."</p>
+                <p class="verse">"And among His signs is that He created spouses for you from among yourselves so that you may find peace and comfort with them. And He placed love and kindness between you. Surely there are signs in this for people who think deeply."</p>
                 <p class="reference">— Surah Ar-Rum (30:21)</p>
             </section>
             
